--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -46,6 +46,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.1.0\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -53,12 +62,21 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -115,12 +133,6 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
@@ -187,21 +199,94 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
+    <Compile Include="App_Start\MappingProfile.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Dtos\CustomerDto.cs" />
+    <Compile Include="Dtos\MovieDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803210915124_InitialModel.cs" />
+    <Compile Include="Migrations\201803210915124_InitialModel.Designer.cs">
+      <DependentUpon>201803210915124_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803210925350_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201803210925350_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201803210925350_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803210930080_AddMembershipType.cs" />
+    <Compile Include="Migrations\201803210930080_AddMembershipType.Designer.cs">
+      <DependentUpon>201803210930080_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803210931302_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201803210931302_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201803210931302_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803220801041_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201803220801041_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201803220801041_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803230538558_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201803230538558_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201803230538558_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803230543184_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201803230543184_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201803230543184_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803230559024_Genres.cs" />
+    <Compile Include="Migrations\201803230559024_Genres.Designer.cs">
+      <DependentUpon>201803230559024_Genres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803230934472_MovieEdit.cs" />
+    <Compile Include="Migrations\201803230934472_MovieEdit.Designer.cs">
+      <DependentUpon>201803230934472_MovieEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803230938141_MovieEdit1.cs" />
+    <Compile Include="Migrations\201803230938141_MovieEdit1.Designer.cs">
+      <DependentUpon>201803230938141_MovieEdit1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803260244321_EditCustomer.cs" />
+    <Compile Include="Migrations\201803260244321_EditCustomer.Designer.cs">
+      <DependentUpon>201803260244321_EditCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803260251235_EditCustomer1.cs" />
+    <Compile Include="Migrations\201803260251235_EditCustomer1.Designer.cs">
+      <DependentUpon>201803260251235_EditCustomer1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803260256313_EditCustomer2.cs" />
+    <Compile Include="Migrations\201803260256313_EditCustomer2.Designer.cs">
+      <DependentUpon>201803260256313_EditCustomer2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803270629156_PopulateMembershipType1.cs" />
+    <Compile Include="Migrations\201803270629156_PopulateMembershipType1.Designer.cs">
+      <DependentUpon>201803270629156_PopulateMembershipType1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearIfAMember.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -258,6 +343,14 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Movies\Exit.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -274,6 +367,50 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803210915124_InitialModel.resx">
+      <DependentUpon>201803210915124_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803210925350_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201803210925350_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803210930080_AddMembershipType.resx">
+      <DependentUpon>201803210930080_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803210931302_PopulateMembershipTypes.resx">
+      <DependentUpon>201803210931302_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803220801041_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201803220801041_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803230538558_AddNameToMembershipType.resx">
+      <DependentUpon>201803230538558_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803230543184_AddBirthdateToCustomer.resx">
+      <DependentUpon>201803230543184_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803230559024_Genres.resx">
+      <DependentUpon>201803230559024_Genres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803230934472_MovieEdit.resx">
+      <DependentUpon>201803230934472_MovieEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803230938141_MovieEdit1.resx">
+      <DependentUpon>201803230938141_MovieEdit1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803260244321_EditCustomer.resx">
+      <DependentUpon>201803260244321_EditCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803260251235_EditCustomer1.resx">
+      <DependentUpon>201803260251235_EditCustomer1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803260256313_EditCustomer2.resx">
+      <DependentUpon>201803260256313_EditCustomer2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803270629156_PopulateMembershipType1.resx">
+      <DependentUpon>201803270629156_PopulateMembershipType1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
