--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -269,9 +269,9 @@
     <Compile Include="Migrations\201803260256313_EditCustomer2.Designer.cs">
       <DependentUpon>201803260256313_EditCustomer2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201803270629156_PopulateMembershipType1.cs" />
-    <Compile Include="Migrations\201803270629156_PopulateMembershipType1.Designer.cs">
-      <DependentUpon>201803270629156_PopulateMembershipType1.cs</DependentUpon>
+    <Compile Include="Migrations\201803300904184_SeedUsers.cs" />
+    <Compile Include="Migrations\201803300904184_SeedUsers.Designer.cs">
+      <DependentUpon>201803300904184_SeedUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -588,9 +588,10 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -648,8 +649,8 @@
     <EmbeddedResource Include="Migrations\201803260256313_EditCustomer2.resx">
       <DependentUpon>201803260256313_EditCustomer2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803270629156_PopulateMembershipType1.resx">
-      <DependentUpon>201803270629156_PopulateMembershipType1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803300904184_SeedUsers.resx">
+      <DependentUpon>201803300904184_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
